title周りを修正

--- a/app/index.pug
+++ b/app/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Jade
+        title Three.js :: Clock
         // build:css styles/main.css
         link(rel='stylesheet', type='text/css', href='../styles/main.css', media='all')
         // endbuild
